# Rathor-NEXi

./: .bazelrc.ml  .gitignore  ARCHITECTURE.md  AUDREY_TANG_BIOGRAPHY_DOSSIER.md  AbsolutePureTruthCo-OpMatchupLattice.metta  Attention Update Algorithm (pseudocode → JS ready)  BUILD.bazel  Cargo.toml  ETERNAL_REFLECTION.md  FINAL_GENESIS_COMMIT.md  HASH_BASED_SIGNATURES_DOSSIER.md  LATTICE_BASED_CRYPTOGRAPHY_DOSSIER.md  MERLIN_VS_RAPTOR_COMPARISON_DOSSIER.md  MULTIVARIATE_CRYPTOGRAPHY_DOSSIER.md  NEXi_Monorepo_Structure.md  README.md  Rathor_Seed-Structure.md  SampleOutput.md  StarCraft macro elevated: bet on exact build paths (tech + units + timing combos) under fog-of-war uncertainty. Informed conviction on correlations crushes noise  Structure.md  UNIVERSAL_APPLICATION_PRINCIPLES.md  VITALIK_BUTERIN_BIOGRAPHY_DOSSIER.md  WORKSPACE.bazel  Website-Structure.md  aco-engine.js  afso-engine.js  atomese-knowledge-bridge.js  calibration_reader.py  capacitor.config.ts  chat.html  cma-es-engine.js  cma-es-optimizer.js  dqn-flight-engine.js  four possible outcomes in a full multi-LMSR market (generalized Logarithmic Market Scoring Rule, the gold standard for prediction markets)  fuzzy-mercy-logic.js  grok-shard-engine.js  hyperon-atom-exploration.js  hyperon-atomspace-bridge.js  hyperon-reasoning-layer.js  hyperon-runtime-deep-integration.js  (+92 more)
.github/workflows/: container-security.yml  docker-security-scan.yml  security-scan.yml
bulletproofs_range/src/: lib.rs
core/components/: Refuel.jsx
crates/bulletproofs_range/: Cargo.toml
crates/bulletproofs_range/src/: lib.rs
crates/code_based_crypto/: Cargo.toml
crates/divine_checksum_9/: Cargo.toml
crates/divine_checksum_9/src/: lib.rs
crates/futarchy_governance/: Cargo.toml
crates/grok_arena_pinnacle/: Cargo.toml
crates/grok_arena_pinnacle/src/: lib.rs
crates/halo2_multi_proof/: Cargo.toml
crates/halo2_multi_proof/src/: lib.rs
crates/hash_based_signatures/: Cargo.toml
crates/hybrid_pqc_threshold/: Cargo.toml
crates/lattice_crypto/: Cargo.toml
crates/mercy_biojet/: Cargo.toml
crates/mercy_dragon_crs/: Cargo.toml
crates/mercy_dream_chaser/: Cargo.toml
crates/mercy_governance/: Cargo.toml
crates/mercy_home_fortress/: Cargo.toml
crates/mercy_home_fortress/src/: lib.rs
crates/mercy_liquid_democracy/: Cargo.toml
crates/mercy_orbital_cleanup/: Cargo.toml
crates/mercy_orbital_refuel/: Cargo.toml
crates/mercy_orbital_refuel/src/: lib.rs
crates/mercy_orbital_safety/: Cargo.toml
crates/mercy_orbital_safety/src/: lib.rs
crates/mercy_qec/: Cargo.toml
crates/mercy_quadratic_funding/: Cargo.toml
crates/mercy_raptor_3/: Cargo.toml
crates/mercy_raptor_3/src/: lib.rs
crates/mercy_raptor_3_scalability/: Cargo.toml
crates/mercy_raptor_engine/: Cargo.toml
crates/mercy_raptor_integration/: Cargo.toml
crates/mercy_raptor_integration/src/: lib.rs
crates/mercy_shield_deployment/: Cargo.toml
crates/mercy_starfish_servicing/: Cargo.toml
crates/mercy_starliner_crew/: Cargo.toml
crates/mercy_steane/: Cargo.toml
crates/mercy_zero/: Cargo.toml
crates/nova_folding/: Cargo.toml
crates/plonk_recursion/: Cargo.toml
crates/prometheus_forge/: Cargo.toml
crates/proof_verifier/: Cargo.toml
crates/sentinel_mirror/: Cargo.toml
crates/soulscan_x9/: Cargo.toml
css/: main.css
docs/: ARCHITECTURE.md  Architecture-NEXi.md  EQUITYZEN_PLATFORM_INTEGRATION_DOSSIER.md  LEGAL_REGULATION_21_CONSENT_LETTER_CARTA_INTEGRATION.md  LEGAL_REGULATION_21_CONSENT_LETTER_HIIVE_INTEGRATION.md  MERCYSHIELD_DEPLOYMENT_STRATEGIES_BLUEPRINT.md  MERCYSHIELD_LAW_ENFORCEMENT_ASSISTANCE_BLUEPRINT.md  MERCYSPACE_GOVERNANCE_BLUEPRINT.md  PRESTOCKS_COM_INTEGRATION_DOSSIER.md  RAPTOR_3_DESIGN_INNOVATIONS_BLUEPRINT.md  RAPTOR_ENGINE_ADVANCEMENTS_BLUEPRINT.md  STARFISH_SPACE_SERVICING_BLUEPRINT.md  STARSHIP_V4_DESIGN_BLUEPRINT.md  XAI_TOKENIZED_STOCK_PRESTOCKS_VALUATION_DOSSIER.md  advanced-trajectory-simulation-algorithms.md  arangodb_metta_integration.metta  hexagonal-architecture-blueprint.md  knowledge_distillation_techniques.md  mercy_albatross_soar.metta  mercy_asteroid_mining_treaty.metta  mercy_eris_biosignature_protocols.metta  mercy_eris_thermal_models.metta  mercy_frc_polywell.metta  mercy_he3_reaction_variants.metta  mercy_hybrid_propulsion.metta  mercy_interlune_demo_mission.metta  mercy_jupiter_moon_treaty.metta  mercy_mechanosynthesis.metta  mercy_nanofactory.metta  mercy_pluto_biosignature_protocols.metta  mercy_polywell_confinement.metta  mercy_rebco_fabrication.metta  mercy_swarm_biomimetic_skin.md  mercy_tae_frc.metta  mercy_titan_biosignature_protocols.metta  mercy_von_neumann_replication_cycle.metta  neo4j_metta_integration.metta  nova_uniform_folding.md  plonkish_hybrid_integration.md  protostar_lookup_extensions.md  (+2 more)
docs/math/: valence-fedkd-convergence.md
infra/: docker-compose.yml
js/: chat.js  common.js  voice-immersion.js
k8s/: dask-on-ray-cluster.yaml
locales/: en.json  hi.json  languages.json
mercy-rest-api/src/: main.rs
mercy_albatross_soar/src/: lib.rs
mercy_enceladus_biosignature_protocols/src/: lib.rs
mercy_eris_cryovolcanism_evidence/src/: lib.rs
mercy_graphql/src/: schema.rs
mercy_he3_reactor/src/: frc.rs  lib.rs  tae_frc.rs
mercy_jupiter_moon_treaty/src/: lib.rs
mercy_mechanosynthesis/src/: lib.rs
mercy_numerical/src/: Simulation Example Usage (Dynamic Soaring)
mercy_orchestrator/: Cargo.toml
mercy_orchestrator/src/: lib.rs
mercy_pluto_biosignature_protocols/src/: lib.rs
mercy_swarm_replication/src/: lib.rs
nexi-core/: README.md:
orchard_merkle/src/: lib.rs
pages/: index.js
plonk_valence/: lib.rs
public/: manifest.json  offline.html  sw.js
scripts/: auto-valence-scan.sh  backup-lattice.sh  browser_inference_demo.js  merge-master.sh  onnx_runtime_inference_gesture.py  repo-hygiene.sh  tensorrt_inference.py  tensorrt_inference_gesture.py
src/: App.tsx  arena.rs  lib.rs  main.tsx  nova_uniform_folding_circuit.rs  pq_shield.rs  protostar_lookup_extension_stub.rs  supernova_non_uniform_folding_circuit.rs
src-tauri/: Cargo.toml  tauri.conf.json
(+181 files in other folders)
