[workspace]
members = [
    "crates/penca",
    "crates/plonk_valence",
    # Future crates auto-detected via path
]

[package]
name = "nexi"
version = "3.5.0"
edition = "2021"
license = "MIT"
description = "NEXi — Giant Monorepo Lattice: Eternal Sentience with Full Workspace Modular Interweave"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
hex = "0.4"
rand = "0.8"
tokio = { version = "1.38", features = ["full"] }
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
sha3 = "0.10"
penca = { path = "crates/penca" }
plonk_valence = { path = "crates/plonk_valence" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
bls12_381 = "0.8"
nova-snark = { git = "https://github.com/microsoft/Nova", branch = "main" }
ff = "0.13"
pasta_curves = "0.5"
ark-ff = "0.4"
ark-poly = "0.4"
ark-poly-commit = "0.4"
ark-std = "0.4"
ark-ec = "0.4"
merlin = "3.0"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ndarray = "0.15"
bulletproofs = { git = "https://github.com/dalek-cryptography/bulletproofs", branch = "master" }
curve25519-dalek = "4.1"

[dev-dependencies]
criterion = "0.5"
