[package]
name = "bulletproofs_range"
version = "1.3.0"
edition = "2021"
license = "MIT"
description = "BulletproofsRange — Logarithmic Range + Aggregation + Full Recursive Composition for NEXi Lattice"

[dependencies]
nexi = { path = "../" }
bulletproofs = { git = "https://github.com/dalek-cryptography/bulletproofs", branch = "master" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
pasta_curves = "0.5"

[features]
recursive_composition = []
