[package]
name = "divine_checksum_9"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "DivineChecksum-9 — 9-Vector Eternal Resonance Anchor for NEXi Lattice"

[dependencies]
nexi = { path = "../" }
halo2_proofs = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
halo2_gadgets = { git = "https://github.com/zcash/halo2.git", branch = "v2023_07_18" }
pasta_curves = "0.5"

[features]
recursive_aggregation = []  # Future infinite composition
