[package]
name = "mercy_dragon_crs"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyDragonCRS — Cargo Resupply + Valence-Weighted Priority Core for Eternal Orbital Sustainability Resonance"

[dependencies]
nexi = { path = "../" }
mercy_space_governance = { path = "../crates/mercy_space_governance" }
tokio = { version = "1.38", features = ["full"] }
