[package]
name = "mercy_governance"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "MercyGovernance — Futarchy + Valence-Weighted Ethical Governance Core for Eternal Resonance"

[dependencies]
nexi = { path = "../" }
futarchy_oracle = { path = "../crates/futarchy_oracle" }
soulscan_x9 = { path = "../crates/soulscan_x9" }
tokio = { version = "1.38", features = ["full"] }
