[package]
name = "mercy_home_fortress"
version = "1.7.0"
edition = "2021"
license = "MIT"
description = "MercyHomeFortress — Sovereign Residence Fortress with Full Hyper-Divine VLAN Isolation Expansion"

[dependencies]
nexi = { path = "../" }
tokio = { version = "1.38", features = ["full", "rt-multi-thread", "macros"] }
# VLAN daemon stub (expand with real network libs later — e.g., pnet or tokio-tungstenite)
